# commandOK

./: Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
src/: config.rs  main.rs
src/provider/: apple_intelligence.rs  apple_intelligence_bridge.swift  claude.rs  gemini.rs  litert_lm.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  vercel_ai_gateway.rs  xai.rs
