[package]
name = "commandok"
version = "0.1.0"
edition = "2021"
description = "Spotlight-like command generator for your terminal, powered by LLMs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
libc = "0.2"
