[package]
name = "commandok"
version = "0.1.3"
edition = "2021"
description = "Spotlight-like command generator for your terminal, powered by LLMs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/64bit/commandOK"
repository = "https://github.com/64bit/commandOK"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
